# test_safer_ffi

./: Cargo.toml  rust_points.h
src/: lib.rs
